Fixes masonry layout bug for getList route implementation. Uses reloadItems to refresh DOM after item views are added to masonry

--- a/site/css/style.css
+++ b/site/css/style.css
@@ -122,7 +122,7 @@ body {
   position: relative;
   width: 320px;
   padding: 5px 8px;
-  margin: 0 auto 20px;
+  margin: 0 auto 25px;
   border-radius: 2px;
   border: 3px solid #131313;
 }
